--- a/SimpleShooting/SimpleShooting.vcxproj
+++ b/SimpleShooting/SimpleShooting.vcxproj
@@ -162,6 +162,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EnemyChar.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OwnChar.cpp" />
   </ItemGroup>
@@ -241,6 +242,7 @@
     <Text Include="Engine\LogMessages.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EnemyChar.h" />
     <ClInclude Include="OwnChar.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
