--- a/SimpleShooting/SimpleShooting.vcxproj.filters
+++ b/SimpleShooting/SimpleShooting.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="OwnChar.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyChar.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
@@ -287,6 +290,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OwnChar.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyChar.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
