自機の弾が敵に当たった時に弾と敵が消えるようにした

--- a/SimpleShooting/SimpleShooting.vcxproj.filters
+++ b/SimpleShooting/SimpleShooting.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="EnemyChar.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Shot.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
@@ -293,6 +296,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="EnemyChar.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Shot.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
