--- a/SimpleShooting/SimpleShooting.vcxproj
+++ b/SimpleShooting/SimpleShooting.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="EnemyChar.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="OwnChar.cpp" />
+    <ClCompile Include="Shot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
@@ -244,6 +245,7 @@
   <ItemGroup>
     <ClInclude Include="EnemyChar.h" />
     <ClInclude Include="OwnChar.h" />
+    <ClInclude Include="Shot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
